# fastapi-rag-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_conversation_owner.py
src/app/: __init__.py  config.py  db.py  dependencies.py  limits.py  logging_config.py  main.py  metrics.py  schemas.py  security.py  tracing.py
src/app/repositories/: conversations.py  jobs.py  users.py
src/app/routers/: auth.py  chat.py  documents.py  health.py
src/app/services/: cache.py  ingestion.py  rag.py  ratelimit.py
tests/: conftest.py  test_auth.py  test_cache.py  test_chat.py  test_documents.py  test_health.py  test_ingestion.py  test_observability.py  test_rag.py  test_ratelimit.py  test_repository.py
