[project]
name = "fastapi-rag-service"
version = "0.8.0"
description = "A production-shaped FastAPI service for serving a RAG/LLM assistant: real RAG (Chroma + Claude) behind a pluggable backend, background document ingestion, per-user rate limiting + caching (in-memory or Redis), observability (JSON logs, Prometheus metrics, optional OpenTelemetry), SSE streaming, OAuth2 + JWT auth, per-user authorization, async SQLAlchemy persistence (SQLite/Postgres) with Alembic, DI, service/repository layering, and async tests. Built as a learning project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyjwt>=2.10",
    "pwdlib[argon2]>=0.2.1",
    "python-multipart>=0.0.18",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "aiosqlite>=0.20",      # async SQLite driver (default / tests)
    "asyncpg>=0.30",        # async Postgres driver (production)
]

# Heavy, optional deps for the real RAG backend. Install with `uv sync --extra rag`.
# The base service (and the whole test suite) runs without these — the mock backend
# is the default and imports nothing from here.
[project.optional-dependencies]
rag = [
    "anthropic>=0.40",     # official Anthropic SDK (answer generation)
    "chromadb>=0.5",       # local vector store + key-less embedding model (retrieval)
]
# Shared rate-limit/cache backend across worker processes. Default backends are
# in-memory; install this only when RATE_LIMIT_BACKEND/CACHE_BACKEND = "redis".
redis = [
    "redis>=5",
]
# OpenTelemetry tracing. Install only when OTEL_ENABLED=true. Exports to the
# console by default, or OTLP (collector / LangSmith) when an endpoint is set.
otel = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
]

# uv reads this group for `uv sync` (dev tooling kept out of the shipped wheel).
[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell the build backend where the importable package lives (the `src/` layout).
[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# `auto` means every `async def test_*` is run on the event loop without a marker.
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# Alembic migration files follow their own generated conventions — don't lint them.
extend-exclude = ["alembic"]

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, UP = pyupgrade, B = bugbear,
# ASYNC = async pitfalls, SIM = simplify. A sensible "strict but not noisy" set.
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's whole DI model relies on calling Depends()/Header()/etc. in argument
# defaults. That's intentional, not the bug B008 warns about — whitelist them.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.File",
    "fastapi.Form",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

# The `rag` extra isn't installed in the default dev/CI env, and these packages'
# stubs are incomplete anyway — let the optional backend's lazy imports type-check
# cleanly without them present.
[[tool.mypy.overrides]]
module = ["anthropic.*", "chromadb.*", "redis.*", "opentelemetry.*"]
ignore_missing_imports = true
